--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>कारक प्रश्नावली</title>
+<title>कारक प्रश्नावली1</title>
 <style>
 body { font-family:'Noto Sans Devanagari',Arial,sans-serif; background:#f4f9ff; padding:20px; text-align:center; }
 h1 { color:#2a4d69; }
